sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:5: error: '=' expected but ';' found.
  var echanger=true;
^